--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake make g++
+        sudo apt-get install -y cmake make g++ build-essential
 
     - name: Configure CMake
       run: cmake -S . -B build
