ci: ctest with -V

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run tests
       run: |
         cd build
-        ctest
+        ctest -V
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
