--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,14 @@ name: CI
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'README.md'
+
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'README.md'
+
   workflow_dispatch:
 
 jobs:
