--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         sudo apt-get install -y cmake make g++ build-essential
 
     - name: Configure CMake
-      run: cmake -S . -B build
+      run: cmake -S . -B build -DBUILD_BINDINGS=OFF
 
     - name: Build
       run: cmake --build build
