--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake make g++ build-essential
+        sudo apt-get install -y cmake make g++ build-essential boost
 
     - name: Configure CMake
       run: cmake -S . -B build -DBUILD_BINDINGS=OFF
