--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -4,13 +4,20 @@ project(SimEvoTests)
 include(gtest.cmake)
 
 # add the test executable
-add_executable(test_spatial_index SpatialIndexTest.cpp)
+add_executable(test_spatial_index_int SpatialIndexIntTest.cpp)
+add_executable(test_spatial_index_uuid SpatialIndexUUIDTest.cpp)
 
 # include from the parent directory
-target_include_directories(test_spatial_index PRIVATE ${PROJECT_SOURCE_DIR}/../include)
+target_include_directories(test_spatial_index_int
+                           PRIVATE ${PROJECT_SOURCE_DIR}/../include)
+target_link_libraries(test_spatial_index_int index gtest_main gtest)
 
-target_link_libraries(test_spatial_index index gtest_main gtest)
+# include from the parent directory
+target_include_directories(test_spatial_index_uuid
+                           PRIVATE ${PROJECT_SOURCE_DIR}/../include)
+target_link_libraries(test_spatial_index_uuid index gtest_main gtest)
 
 # add the test to the test suite
-add_test(NAME SpatialIndexTest COMMAND test_spatial_index)
-set_tests_properties(SpatialIndexTest PROPERTIES LABELS "SpatialIndex")
+add_test(NAME SpatialIndexIntTest COMMAND test_spatial_index_int)
+add_test(NAME SpatialIndexUUIDTest COMMAND test_spatial_index_uuid)
+set_tests_properties(SpatialIndexIntTest SpatialIndexUUIDTest PROPERTIES LABELS "SpatialIndex")
