feat: make it setup.py installalbe

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -1,16 +1,29 @@
 cmake_minimum_required(VERSION 3.24)
 project(simevo_bindings)
 
-include(pybind11.cmake)
+find_package(pybind11 CONFIG QUIET)
+if(pybind11_FOUND)
+  message(STATUS "Using installed pybind11")
+else()
+  message(STATUS "pybind11 not found, downloading it now")
+  include(pybind11.cmake)
+endif()
 
-find_package(Python3 COMPONENTS Development REQUIRED)
-# find_package(pybind11 REQUIRED)
+find_package(
+  Python3
+  COMPONENTS Development
+  REQUIRED)
 
-pybind11_add_module(simevo
-    python_bindings.cpp
-    core/genes_bindings.cpp
-    core/organism_bindings.cpp
-)
+pybind11_add_module(
+  simevopy
+  python_bindings.cpp
+  core/BaseEnvironmentObject_bindings.cpp
+  core/Environment_bindings.cpp
+  core/Food_bindings.cpp
+  core/Genes_bindings.cpp
+  core/Organism_bindings.cpp)
 
-target_include_directories(simevo PRIVATE ../include)
-target_link_libraries(simevo PRIVATE core index)
+target_include_directories(simevopy PUBLIC ../include)
+target_link_libraries(simevopy PUBLIC core index)
+
+install(TARGETS simevopy LIBRARY DESTINATION simevopy)
