feat: make python setup.py install can install on the right place

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -26,4 +26,4 @@ pybind11_add_module(
 target_include_directories(simevopy PUBLIC ../include)
 target_link_libraries(simevopy PUBLIC core index)
 
-install(TARGETS simevopy LIBRARY DESTINATION simevopy)
+install(TARGETS simevopy LIBRARY DESTINATION .)
