feat: both opt and default work on example

--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -4,13 +4,7 @@ project(SimEvoTests)
 include(gtest.cmake)
 
 # add the test executable
-add_executable(test_spatial_index_int SpatialIndexIntTest.cpp)
 add_executable(test_spatial_index_uuid SpatialIndexUUIDTest.cpp)
-
-# include from the parent directory
-target_include_directories(test_spatial_index_int
-                           PRIVATE ${PROJECT_SOURCE_DIR}/../include)
-target_link_libraries(test_spatial_index_int index gtest_main gtest)
 
 # include from the parent directory
 target_include_directories(test_spatial_index_uuid
@@ -18,6 +12,5 @@ target_include_directories(test_spatial_index_uuid
 target_link_libraries(test_spatial_index_uuid index gtest_main gtest)
 
 # add the test to the test suite
-add_test(NAME SpatialIndexIntTest COMMAND test_spatial_index_int)
 add_test(NAME SpatialIndexUUIDTest COMMAND test_spatial_index_uuid)
-set_tests_properties(SpatialIndexIntTest SpatialIndexUUIDTest PROPERTIES LABELS "SpatialIndex")
+set_tests_properties(SpatialIndexUUIDTest PROPERTIES LABELS "SpatialIndex")
