--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,8 +76,8 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
         git add setup.py
-        git commit -m "Bump version to ${{ env.new_version }}"
-        git tag "v${{ env.new_version }}"
+        git commit -m "Bump version to ${{ needs.build.outputs.new_version }}"
+        git tag "v${{ needs.build.outputs.new_version }}"
         git push origin main --tags || true
 
     - name: Build Python package
